# portfolio

./: Makefile  README.md  best_picture.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
Coffee Shop/: coffee_shop.ipynb
Credit Card Approval/: credit_aproval.ipynb
Electric Bikes Reviews/: electric_motorcycles.ipynb
Google Play/: Android_Apps.ipynb
Hospital readmission rate/: hospital.ipynb
Nobel/: nobel_prizes.ipynb
Oscar Winner Prediciton/: README.md  config.py  oscars.ipynb
Oscars Winner Prediciton/: README.md
app/: Home.py
app/pages/: 1_About_me.py  2_Projects.py  3_CV.py
