[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gustavo_santos_portfolio"
version = "0.0.1"
description = "This repo contains an app to display my personal projects and their results"
authors = [
  { name = "Gustavo de Paula Santos" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["gustavo_santos_portfolio"]
force_sort_within_sections = true
